@@ -75,6 +75,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Bugfix in utils.getHistory for the datachanges history, need to reverse history before proceeding or comparison is
   made on wrong parent change.
 - Add line to the Zope log when item order is changed on a meeting
+- Added adaptable method MeetingItem.getListTypeNormalValue to be able to specify another value than 'normal' for the listType of
+  an item that not isLate.  This way it is possible to manage different values for a normal item
 
 4.0 (2017-08-04)
 ----------------
